developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_name_must_not_contain_spaces-store.kmn
c Description: Verifies that kmc reports an error with invalid names in groups, stores, and deadkeys

store(&NAME) 'error_name_must_not_contain_spaces-store'

begin unicode > use(main)

store(my test) 'test'

group(main) using keys
  + [K_A] > 'a'
